--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,94 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.main {
+  display: block;
+}
+
+.mainContainer {
+  min-width: 10rem;
+}
+
+.selectbox-status {
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+}
+
+.selectbox-status::after {
+  position: absolute;
+  right: 15px;
+  width: 10px;
+  height: 7px;
+  background-color: #535353;
+  clip-path: polygon(0 0, 100% 0, 50% 100%);
+  content: "";
+  pointer-events: none;
+}
+
+.selectbox-status select {
+  appearance: none;
+  min-width: 100px;
+  height: 2.8em;
+  padding: 0.4em calc(0.8em + 30px) 0.4em 0.8em;
+  border: 1px solid #d0d0d0;
+  border-radius: 3px;
+  background-color: #fff;
+  color: #333333;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.accordion-003 {
+  max-width: 500px;
+  margin-bottom: 7px;
+  border-bottom: 2px solid #d0d0d0;
+}
+
+.accordion-003 summary {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 1em 1em;
+  color: #333333;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.accordion-003 summary::-webkit-details-marker {
+  display: none;
+}
+
+.accordion-003 summary::after {
+  transform: translateY(-25%) rotate(45deg);
+  width: 7px;
+  height: 7px;
+  margin-left: 10px;
+  border-bottom: 3px solid #333333b3;
+  border-right: 3px solid #333333b3;
+  content: "";
+  transition: transform 0.3s;
+}
+
+.accordion-003[open] summary::after {
+  transform: rotate(225deg);
+}
+
+.accordion-003 p {
+  transform: translateY(-10px);
+  opacity: 0;
+  margin: 0;
+  padding: 0.3em 2em 1.5em;
+  color: #333333;
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+.accordion-003[open] p {
+  transform: none;
+  opacity: 1;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -64,5 +152,11 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media screen and (min-width: 760px) {
+  .main {
+    display: flex;
   }
 }
